0.17 (2013-05-7)
------------------
- added the following exception clases ( inheritance shown )

	ApiError
		ApiAuthError
			ApiAuthExpiredError
		ApiApplicationError
		ApiResponseError
		ApiRuntimeError
			ApiRuntimeVerirficationFormatError
			ApiRuntimeGrantError
			ApiRuntimeScopeError
			ApiRuntimeGraphMethodError

- extended exceptions to include the originally raised error ( `raised` ) and the the `response` if available

- added format checking to the response during batch requests

- extended unit tests to ensure everything works.  they could be better

- consolidated the parsing of the response into the api_proxy.  facebook's graph has different response types and behaviors.  this helps consolidate it for developers.





0.16 (2013-05-2)
------------------
- added AuthException to better catch auth failures


0.15 (2013-01-2)
------------------
- Adding Facebook OpenGraph actions API support
-- graph__action_create
-- graph__action_delete
-- graph__action_list

tests are tbd

0.14 (2012-04-16)
------------------
- Updated to Pyramid Classifier

0.13 (2012-03-23)
------------------
- added support for extending access tokens see https://developers.facebook.com/roadmap/offline-access-removal/

0.12 (2012-01-26)
------------------
- added 'verify_signed_request' , which does exactly what the name suggests

0.11 (2012-01-26)
------------------
- turned FacebookPyramid into a subclass of FacebookHub, and overloaded some methods with calls to the original.  This removed a need for staching a FacebookHub object.
- renamed two functions that improperly suggested their functionality.
-- deprecated 'graph__url_me' ; replaced with 'graph__url_me_for_access_token'
-- deprecated 'graph__get_profile' ; replaced with 'graph__get_profile_for_access_token'
- started planning real tests using ENV vars


0.1 (2012-01-25)
------------------
- initial release