@@ -3,7 +3,3 @@ simple utilities for Facebook integration
 currently supports oAuth user flow and graph operations
 
 for more info, please see facebook_utils.py
-
-
-ToDo
-	I think in the future, the 'dicts' that come back should be cast into a 'response' object, and there will be some metadata attached to it.
